--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
   "name": "merge-img",
   "version": "2.1.2",
+  "private": true,
   "description": "Merge multiple images into a single image",
   "author": "Plusb Preco <plusb21@gmail.com>",
   "main": "lib/index.js",
   "scripts": {
-    "prepublish": "npm run test && npm run build",
+    "prepublish": "npm run lint && npm run test && npm run build",
     "prebuild": "npm run clean",
-    "test": "eslint . && jest",
-    "build": "babel --out-dir lib src",
-    "clean": "rimraf lib"
+    "test": "jest test",
+    "lint": "eslint .",
+    "build": "babel src --out-dir lib",
+    "clean": "node -e 'fs.rmSync(\"lib\", { recursive: true })'"
   },
   "engines": {
-    "node": ">= 4"
+    "node": ">= 16"
   },
   "license": "MIT",
-  "homepage": "https://github.com/preco21/merge-img#readme",
-  "repository": "preco21/merge-img",
-  "bugs": {
-    "url": "https://github.com/preco21/merge-img/issues"
-  },
+  "repository": "anzawatta/merge-img",
   "files": [
     "lib"
   ],
@@ -32,18 +30,15 @@
     "merge"
   ],
   "dependencies": {
-    "is-plain-obj": "^1.1.0",
-    "jimp": "0.2.27"
+    "is-plain-obj": "^4.0.0",
+    "jimp": "^0.16.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^20.0.3",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-1": "^6.24.1",
-    "eslint": "^4.5.0",
-    "eslint-config-prev": "^6.0.0",
-    "jest": "^20.0.4",
-    "rimraf": "^2.6.1"
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "babel-jest": "^28.0.2",
+    "eslint": "^8.14.0",
+    "jest": "^28.0.2"
   }
 }
