--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest test",
     "lint": "eslint .",
     "build": "babel src --out-dir lib",
-    "clean": "node -e 'fs.rmSync(\"lib\", { recursive: true })'"
+    "clean": "node -e 'fs.rmSync(`lib`, { recursive: true })'"
   },
   "engines": {
     "node": ">= 16"
